# BlackICE_Connect

./: .gitignore  AUTHORS  BIC_Supported_Applications.md  BIC_Supported_CryptoFunctions.md  BlackICEConnect.sln  Building_Linux_dependencies.md  CHANGELOG.md  CONTRIBUTORS  Install_BIC_KSP_Windows.md  Install_BIC_PKCS11_Linux.md  Install_BIC_PKCS11_Windows.md  README.md  Test_BIC_KSP_Windows.md  Test_BIC_PKCS11_Linux.md  Test_BIC_PKCS11_Windows.md
BIC_CNG/CNG_Connector/: CNG_Connector.rc  CNG_Connector.vcxproj  CNG_Connector.vcxproj.filters  auth.c  resource.h
BIC_CNG/CNG_Connector/src/: KSP.c  KSP.def  KSP.h  KSPHelper.c  KSPStorage.c
BIC_CNG/CNG_EncryptConfig/: CNG_EncryptConfig.c  CNG_EncryptConfig.vcxproj  CNG_EncryptConfig.vcxproj.filters  pch.cpp  pch.h
BIC_CNG/CNG_Installer/: BlackICEconnect_win.cnf  CNG_Installer.vdproj  customPassword_en.wid  customPassword_es.wid
BIC_CNG/CNG_Register/: CNG_Register.cpp  CNG_Register.vcxproj  CNG_Register.vcxproj.filters  register.cpp  register.h
BIC_CNG/ConfFile_Formatter/: ConfFile_Formatter.cpp  ConfFile_Formatter.vcxproj  ConfFile_Formatter.vcxproj.filters
BIC_PKCS11/PKCS11_Connector/: CMakeLists.txt  PKCS11_Connector.vcxproj  PKCS11_Connector.vcxproj.filters  linux-compile.sh
BIC_PKCS11/PKCS11_Connector/src/: cryptoki.c  cryptoki.h  cryptokiTypes.c  cryptokiTypes.h  cryptoki_helper.c
BIC_PKCS11/PKCS11_Connector/src/Helpers/: common.c
BIC_PKCS11/PKCS11_Installer/: CMakeLists.txt  PKCS11_Installer.c  PKCS11_Installer.vcxproj  PKCS11_Installer.vcxproj.filters  PKCS11_Interface.c  PKCS11_Interface.h
BIC_PKCS11/PKCS11_Installer/cryptoki/: CMakeLists.txt  cryptoki.h  pkcs11t.h
BIC_PKCS11/PKCS11_Installer/linux-setup/: BlackICEconnect_template.cnf  README.txt  linux-compile.sh  setup.sh
BIC_PKCS11/PKCS11_Installer/setup_scripts/: GradiantBlackIceConnect_x64.nsi  GradiantBlackIceConnect_x86.nsi  detect_path.bat
Modules/AKV_Module/: AKV_Module.vcxitems  AKV_Module.vcxitems.filters
Modules/AKV_Module/src/: CNGStorage.c  SecureConfiguration.c  clientRest.c  clientRest.h  clientRestTypes.c  clientRestTypes.h  clientRest_helper.c  interface.h  parser_helper.c
Modules/Common_Module/: Common_Module.vcxitems  Common_Module.vcxitems.filters
Modules/Common_Module/src/: Debug.c  Debug.h  common.c  common.h  librb64u.c  librb64u.h
Test_Projects/akv_CNG.Test/: KSPConfig.c  KSPConfig.h  akv_CNG.Test.vcxproj  akv_CNG.Test.vcxproj.filters  akv_CNGTest.cpp
Test_Projects/akv_pkcs11.Test/: akv_pkcs11.Test.csproj  akv_pkcs11LibraryTest.cs  compilation.sh
Test_Projects/akv_pkcs11.Test/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
Test_Projects/akv_pkcs11.Test/src/: PKCS11Definitions.cs  PKCS11Utils.cs  RestClient.cs  akv_pkcs11LibraryTest.cs
